syntax = "proto3";

package coteacher.v1;

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_TEACHER = 1;
    ROLE_STUDENT = 2;
  }
}

message ClassInvitationCode {
  string id = 1;
  string class_id = 2;
  string invitation_code = 3;
  string expiration_date = 4;
  bool is_active = 5;
}

message Class {
  string id = 1;
  string name = 2;
  string teacher_id = 3;
}
